Fixed a little bit of problems regarding the mobile version, there is still an issue with screen resolutions ( maybe to fix later ) Next step: think a little about scrolling and behavior on mobile devices, continue with projects.
YOU CAN DO IT

--- a/css/main.css
+++ b/css/main.css
@@ -567,17 +567,6 @@ NOTE: All is referenced to width of the screen
   backface-visibility: hidden;
   perspective: 1000px;
 } */
-
-img {
-    /*image-rendering: optimizeSpeed;             /*                     */*/
-    /*image-rendering: -moz-crisp-edges;          /* Firefox             */*/
-    image-rendering: -o-optimize-contrast;            /* Opera               */
-    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: -moz-optimize-contrast;
-    /*image-rendering: optimize-contrast;         /* CSS3 Proposed       */*/
-    /*-ms-interpolation-mode: nearest-neighbor;   /* IE8+                */*/
-    }
 /* 
 @keyframes shake {
   10%, 90% {
@@ -610,157 +599,11 @@ img {
   box-shadow: .5vw -,5vw 1vw .1vw #fff;
 } */
 
-@media (max-aspect-ratio:3/2){
-  *{
-    margin-top:0;
-  }
 
-  body .grid{
-    display:none;
-  }
-  body .mobile_version{
-   display:flex;
-  }
-
-  .mobile_version h1{
-    padding:2vw;
-    margin-top:0vw;
-    font-size:15vw;
-    font-weight: 600;
-    color:white;
-  }
-
-  .mobile_version h3{
-    font-family: "Open Sans",sans-serif;
-    padding:9vw 2vw;
-    margin-top:3vw;
-    margin-left:45vw;
-    font-size:7vw;
-    font-weight:300;
-    /*font-style: italic*/
-    color:white;
-    z-index:0;
-  }
-
-  .block_slack h3{
-    margin-left:65vw;
-  }
-
-  .block_micro h3{
-    margin-top:-1vw;
-  }
-
-  .block_computer{
-    width:100%;
-    height:37vw;
-    position:absolute;
-    top:107vw;
-  }
-
-  .block_woodman{
-    width:100%;
-    height:37vw;
-    position:absolute;
-    top:69vw;
-  }
-
-  .block_micro{
-    width:100%;
-    height:37vw;
-    position:absolute;
-    top:147vw;
-  }
-
-  .block_slack{
-    width:100%;
-    height:37vw;
-    position:absolute;
-    top:180vw;
-  }
-
-  #Computer{
-    width:68.41vw;
-    height:42.25vw;
-    position:absolute;
-    left:30vw;
-    bottom:-3vw;
-  }
-
-  #Books_0{
-    width:27.077vw;
-    height:36.054vw;
-    position:absolute;
-    left:2vw;
-    bottom:-3.4vw;
-  }
-
-  #Books_mid_0_shadow{
-    width:9.941vw;
-    height:39.144vw;
-    position:absolute;
-    left:0;
-    bottom:-5vw;
-  }
-
-  #Pens{
-    width:18.582vw;
-    height:27vw;
-    position:absolute;
-    left:20vw;
-    bottom:-1vw;
-  }
-
-  #Woodman{
-    width:18.1215vw;
-    height:36.78vw;
-    position:absolute;
-    left:25vw;
-    bottom:-4vw;
-    image-rendering:crisp-edges;
-  }
-
-  #Papers{
-    width:30.419vw;
-    height:9.3542vw;
-    position:absolute;
-    left:10vw;
-    bottom:-3.5vw;
-  }
-
-  #Slack{
-    width:78.6vw;
-    height:32.8vw;
-    position:absolute;
-    left:6vw;
-    bottom:-4vw;
-  }
-
-  #Slack_shadow{
-    width:60vw;
-    height:5.603vw;
-    position:absolute;
-    left:2vw;
-    margin-top:-.5vw;
-  }
-
-  #Books_left{
-    width:50.33vw;
-    height:33.5vw;
-    position:absolute;
-    left:2vw;
-    bottom:-1vw;
-  }
-
-  #Micro{
-    width:50.255vw;
-    height:14.779vw;
-    position:absolute;
-    right:19vw;
-    bottom:1.5vw;
-  }
+#warning{
+  font-size: 80px;
+  padding: 20px;
 }
-
-
 /*Mobile versions*/
 .mobile_version{
   display: none;
@@ -817,12 +660,31 @@ img {
   text-align:center;
   color:#fff;
 }
-
 /*Media Queries*/
+
+
+@media only screen and (min-width: 650px) and (min-aspect-ratio:3/2){
+  #warning{
+    display:none;
+  }
+}
+
+@media only screen and (min-width: 650px) and (max-aspect-ratio:3/2){
+  body .grid{
+    display:none;
+  }
+
+  #warning{
+    display:visible;
+  }
+}
 
 @media only screen and (max-width: 650px){
   *{
     margin-top:0;
+  }
+  #warning{
+    display:none;
   }
 
   body .grid{
@@ -967,6 +829,27 @@ img {
     position:absolute;
     right:19vw;
     bottom:1.5vw;
+  }
+
+  /* Modals */
+
+
+  .modal_icon{
+    display:none;
+  }
+  .modal_title{
+    display:none;
+  }
+  .modal_title_rotate{
+    display:none;
+  }
+  .projects_list{
+    display:none;
+  }
+
+  #kuniyoshi_section{
+    visibility: visible;
+
   }
 }
 
